--- a/css/styles.css
+++ b/css/styles.css
@@ -791,7 +791,7 @@ body {
     right: 470px;
 }
 
-/* Как изменить положение изображения в псевдоклассе? */
+/* Как изменить положение изображениz в псевдоклассе? */
 
 .realize {
     background-image: url(../images/realizeBackground.png);
